2006-06-13  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c: (transfer_done_cb): Fix Bug 167045 -
	Strange wording in gnome-control-center theme manager messages

2006-04-28  Thomas Wood  <thos@gnome.org>

	* gnome-theme-save.c: (write_theme_to_disk), (save_theme_to_disk),
	(save_dialog_response):
	* theme-properties.glade:

	- Added option to save current background when saving a custom theme.
	Fixes bug 330302 - Saved themes should remember wallpaper.
	- Also implements some of the UI changes for the save dialog, suggested
	in bug 100622

2006-04-27  Thomas Wood  <thos@gnome.org>

	* gnome-theme-save.c: (str_remove_slash),
	(setup_directory_structure):

	Fix bug 317375 - theme-manager (saving) sometimes needlessly asks
	whether to overwrite

2006-04-26  Thomas Wood  <thos@gnome.org>

	* gnome-theme-save.c: (str_remove_slash),
	(setup_directory_structure), (write_theme_to_disk),
	(gnome_theme_save_show_dialog):

	Fix bug 139692 - Some characters cannot be given as the theme name

2006-04-25  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* gnome-theme-installer.c: (gnome_theme_install_from_uri),
	(gnome_theme_installer_run_cb), (gnome_theme_installer_run):
	* gnome-theme-installer.h:
	* gnome-theme-manager.c:
	(gnome_theme_manager_drag_data_received_cb):
	* theme-install.glade:

	- Remove redundant theme-install dialog
	- Fix bug 138795 (file dialog forgets last browsed to or installed from
	  location)

2006-04-19  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (gnome_theme_details_init),
	(gnome_theme_details_reread_themes_from_disk):
	* gnome-theme-installer.c: (gnome_theme_installer_run_cb):
	* gnome-theme-installer.h:
	* gnome-theme-manager.c: (setup_dialog):
	* theme-properties.glade:

	Remove drag and drop information text, and add Install buttons to each
	tab in the details window. Closes bug 99535 - [ui-review] Theme manager UI issues

2006-04-10  Thomas Wood  <thos@gnome.org>
